# aristar-worktrees

./: .gitignore  AGENTS.md  README.md  RESEARCH_ON_OPENCODE.md  agent-manager-implementation-plan.md  backend-reorganization-plan.md.md  bunfig.toml  eslint.config.js  frontend-reorganization-plan.md  index.html  opencode-sse-reorganization-plan.md  package.json  plan.md  plan2.md  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
scripts/: test-agent-streaming.ts  test-two-agents-streaming.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent_manager/: README.md  agent_operations.rs  commands.rs  mod.rs  opencode.rs  store.rs  task_operations.rs  types.rs
src-tauri/src/commands/: mod.rs  opencode_manager.rs  task_manager.rs  worktree.rs
src-tauri/src/commands/tests/: helpers.rs  mod.rs  state_tests.rs  worktree_integration_tests.rs  worktree_unit_tests.rs
src-tauri/src/core/: README.md  commands.rs  mod.rs  persistence.rs  system.rs  types.rs
src-tauri/src/models/: mod.rs  task.rs
src-tauri/src/tests/: README.md  helpers.rs  mod.rs
src-tauri/src/tests/agent_manager/: mod.rs  opencode_tests.rs  task_tests.rs
src-tauri/src/tests/worktrees/: integration_tests.rs  mod.rs  operations_tests.rs  security_tests.rs  store_tests.rs
src-tauri/src/worktrees/: README.md  commands.rs  external_apps.rs  mod.rs  operations.rs  store.rs  types.rs
(+141 files in other folders)
